[package]
name = "sundial"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "sundial"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
port-anchor-adaptor = "0.2.7"
solana-maths = "0.1.1"
port-variable-rate-lending-instructions = "0.2.9"
paste = "1.0.6"