[package]
name = "sundial"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sundial"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
port-anchor-adaptor = "0.2.8"
solana-maths = "0.1.1"
port-variable-rate-lending-instructions = "0.3.0"
paste = "1.0.6"
vipers = "1.5.5"
pyth-client = "0.2.2"
itertools = "0.10.1"